# stream

./: README.md
.github/workflows/: ci.yml  release.yml
dev-diary/: .gitignore  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
dev-diary/.cursor/rules/: design.mdc  markdown-editor.mdc  project-overview.mdc
dev-diary/.github/workflows/: ci.yml
dev-diary/src-tauri/: Cargo.toml  tauri.conf.json
dev-diary/src-tauri/capabilities/: default.json
dev-diary/src-tauri/src/: lib.rs  main.rs
dev-diary/src/app/: globals.css  layout.tsx  page.tsx
dev-diary/src/components/: CommitFilter.tsx  CommitOverlay.tsx  FileReaderComponents.tsx  FileReaderFooter.tsx  FileReaderHeader.tsx  FileReaderScreen.tsx  FolderPicker.tsx  FolderSelectionScreen.tsx  MarkdownEditor.tsx  MarkdownReader.tsx  RepoConnector.tsx  SettingsDialog.tsx
dev-diary/src/utils/: gitReader.ts  markdownReader.ts
stream/: .env.example  .gitignore  biome.json  package.json  pnpm-lock.yaml
stream/.cursor/rules/: project-overview.mdc
stream/src-tauri/: Cargo.toml  tauri.conf.json
stream/src-tauri/capabilities/: default.json
stream/src-tauri/icons/: icon.icns
stream/src-tauri/src/: lib.rs  main.rs  search.rs
stream/src-tauri/src/ipc/: git.rs  markdown.rs  mod.rs
stream/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
stream/src/components/: CommitFilter.tsx  FileReaderComponents.tsx  FileReaderScreen.tsx  FolderPicker.tsx  MarkdownEditor.tsx  SettingsDialog.tsx  api-key-initializer.tsx  auto-refresh-provider.tsx  auto-updater.tsx  commit-filter.tsx  date-header.tsx  (+20 more)
(+44 files in other folders)
