[package]
name = "stream"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "ssh", "https"] }
chrono = { version = "0.4", features = ["serde"] }
xattr = "1.0"
regex = "1"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor", "NSWindow"] }


